started on initial screen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<pre>SITE UNDER DEVELOPMENT</pre>
+<html>
+
+<head>
+<title>Portfolio</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+<div class="slide" id="s1">
+		<img class="float-left" src="https://via.placeholder.com/150x150">
+		<div>
+			<p class="title">Dosisod</p>
+			<p class="desc">stuff</p>
+		</div>
+	</div>
+</div>
+
+</body>
+
+</html>
