started working on slide1 cards

--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 
 <head>
 <title>Portfolio</title>
+
 <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 
 <div class="slide" id="s1">
-		<img class="float-left" src="https://via.placeholder.com/150x150">
+	<div class="status-bar">
+		<img class="github" src="img/github.png">
 		<div>
 			<p class="title">Dosisod</p>
-			<p class="desc">stuff</p>
+			<p class="desc">I love programming</p>
 		</div>
+	</div>
+	<div class="card">
+		<p class="card-title">HTML</p>
+		<p class="card-desc">placeholder text</p>
 	</div>
 </div>
 
