added transitions and paralax

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 
 <body>
 
-<div class="slide" id="s1">
-	<div class="status-bar">
-		<img class="github" src="img/github.png">
-		<div>
-			<p class="title">Dosisod</p>
-			<p class="desc">I love programming</p>
+<div class="slides">
+	<div class="slide" id="s1">
+		<div class="status-bar">
+			<img class="github" src="img/github.png">
+			<div>
+				<p class="title">Dosisod</p>
+				<p class="desc">I love programming</p>
+			</div>
+		</div>
+		<div class="card">
+			<p class="card-title">HTML</p>
+			<p class="card-desc">placeholder text</p>
 		</div>
 	</div>
-	<div class="card">
-		<p class="card-title">HTML</p>
-		<p class="card-desc">placeholder text</p>
+	<div class="slide" id="s2">
+		<pre>SLIDE 2</pre>
 	</div>
 </div>
 
 </body>
+
+<script src="scroll.js"></script>
 
 </html>
