added commit notifier structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Portfolio</title>
 
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="slide2.css">
 
 </head>
 
@@ -24,7 +25,105 @@
 		</div>
 	</div>
 	<div class="slide" id="s2">
-		<pre>SLIDE 2</pre>
+		<ul class="container">
+			<li>
+				<span class="bubble bubble-void bubble-title">Daily Open-Source</span>
+			</li>
+			<li>
+				<span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
+				<ul>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+					<li>
+						<span class="bubble bubble-fill">March 16</span>
+						<span class="bubble bubble-void">Example repo</span>
+						<span class="bubble bubble-void">Example commit</span>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</div>
 </div>
 
