added parser for recent commits

--- a/index.html
+++ b/index.html
@@ -31,97 +31,7 @@
 			</li>
 			<li>
 				<span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
-				<ul>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-					<li>
-						<span class="bubble bubble-fill">March 16</span>
-						<span class="bubble bubble-void">Example repo</span>
-						<span class="bubble bubble-void">Example commit</span>
-					</li>
-				</ul>
+				<ul id="recent"></ul>
 			</li>
 		</ul>
 	</div>
@@ -130,5 +40,8 @@
 </body>
 
 <script src="scroll.js"></script>
+<script src="last.js"></script>
+
+<script>get_last()</script>
 
 </html>
