--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <div class="slides">
 	<div class="slide" id="s1">
 		<div class="status-bar">
-			<img class="github" src="img/github.png">
+			<a href="https://github.com/dosisod">
+				<img class="github" src="img/github.png">
+			</a>
 			<div>
 				<p class="title">Dosisod</p>
 				<p class="desc">I love programming</p>
@@ -42,6 +44,6 @@
 <script src="scroll.js"></script>
 <script src="last.js"></script>
 
-<script>get_last()</script>
+<!-- <script>get_last()</script> -->
 
 </html>
