removed paralax styled display for traditional display

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 <script src="scroll.js"></script>
 <script src="last.js"></script>
 
-<!-- <script>get_last()</script> -->
+<script>get_last()</script>
 
 </html>
