added card-row holder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Portfolio</title>
 
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="slide1.css">
 <link rel="stylesheet" href="slide2.css">
 
 </head>
@@ -21,9 +22,15 @@
 				<p class="desc">I love programming</p>
 			</div>
 		</div>
-		<div class="card">
-			<p class="card-title">HTML</p>
-			<p class="card-desc">placeholder text</p>
+		<div class="card-row">
+			<div class="card">
+				<p class="card-title">PYTHON</p>
+				<p class="card-desc">placeholder text</p>
+			</div>
+			<div class="card">
+				<p class="card-title">JAVASCRIPT</p>
+				<p class="card-desc"> placeholder text</p>
+			</div>
 		</div>
 	</div>
 	<div class="slide" id="s2">
@@ -41,9 +48,8 @@
 
 </body>
 
-<script src="scroll.js"></script>
 <script src="last.js"></script>
 
-<script>get_last()</script>
+<!-- <script>get_last()</script> -->
 
 </html>
