added content to cards, stylized everything

--- a/index.html
+++ b/index.html
@@ -25,11 +25,39 @@
 		<div class="card-row">
 			<div class="card">
 				<p class="card-title">PYTHON</p>
-				<p class="card-desc">placeholder text</p>
+				<p class="card-desc">
+					Webscraping with beautiful soup
+					<a class="orange" href="https://github.com/dosisod/EZWS">(EZWS)</a>,
+					and an under-development webapp using flask
+					<a class="orange" href="https://github.com/dosisod/SHIMON">(SHIMON)</a>
+				</p>
 			</div>
 			<div class="card">
 				<p class="card-title">JAVASCRIPT</p>
-				<p class="card-desc"> placeholder text</p>
+				<p class="card-desc">
+					SHA512-based timeout for web downloads
+					<a class="orange" href="https://github.com/dosisod/wasjs">(was.js)</a>,
+					offline password manager add-on for FF
+					<a class="orange" href="https://github.com/dosisod/PWDMGR">(PWDMGR)</a>
+				</p>
+			</div>
+		</div>
+		<div class="card-row">
+			<div class="card">
+				<p class="card-title">C++</p>
+				<p class="card-desc">
+					Terminal text editor using ncurses
+					<a class="orange" href="https://github.com/dosisod/banana">(banana)</a>,
+					module-based robot-building framework for FRC teams
+					<a class="orange" href="https://github.com/FRC-4309/StarDust">(StarDust)</a>
+				</p>
+			</div>
+			<div class="card">
+				<p class="card-title">PHP</p>
+				<p class="card-desc">
+					Small and versatile music player using HTML, JS, and PHP
+					<a class="orange" href="https://github.com/dosisod/music">(music)</a>
+				</p>
 			</div>
 		</div>
 	</div>
@@ -51,5 +79,6 @@
 <script src="last.js"></script>
 
 <!-- <script>get_last()</script> -->
+<script>get_last()</script>
 
 </html>
