replaced love with heart, made card titles responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</a>
 			<div>
 				<p class="title">Dosisod</p>
-				<p class="desc">I love programming</p>
+				<p class="desc">I <span class="heart">&hearts;&nbsp;</span>programming</p>
 			</div>
 		</div>
 		<div class="card-row">
