--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <title>Portfolio</title>
 
+<script src="nu.min.js"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="slide1.css">
 <link rel="stylesheet" href="slide2.css">
@@ -79,7 +80,10 @@
 
 <script src="last.js"></script>
 
-<!-- <script>get_last()</script> -->
-<script>get_last()</script>
+<script>
+window.onload=function(event) {
+	recent_commits()
+}
+</script>
 
 </html>
