added git contribs, enhanced styling

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 			<li>
 				<span class="bubble bubble-void bubble-title">Daily Open-Source</span>
 			</li>
+			<li class="contrib-container">
+				<img class="contribs" src="http://ghchart.rshah.org/dosisod" alt="dosisod's github contributions"/>
+			</li>
 			<li>
 				<span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
 				<ul id="recent"></ul>
