added optimizations to improve SEO and speed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<meta name="description" content="Dosisod's Online Portfolio">
 <meta name="viewport" content="width=device-width">
 
 <head>
 <title>Portfolio</title>
 
-<script src="nu.min.js"></script>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="slide1.css">
-<link rel="stylesheet" href="slide2.css">
+<script defer async src="/bin/bundle.js"></script>
+<link rel="stylesheet" href="/bin/bundle.css">
 
 </head>
 
@@ -16,8 +16,8 @@
 <div class="slides">
 	<div class="slide" id="s1">
 		<div class="status-bar">
-			<a href="https://github.com/dosisod">
-				<img class="github" src="img/github.png">
+			<a href="https://github.com/dosisod" name="github-wrapper">
+				<img alt="Dosisod's Github Page" class="github" src="img/github.png">
 			</a>
 			<div>
 				<p class="title">Dosisod</p>
@@ -80,8 +80,6 @@
 </div>
 
 </body>
-
-<script src="last.js"></script>
 
 <script>
 window.onload=function(event) {
