--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <meta name="viewport" content="width=device-width">
 
 <head>
-<title>Portfolio</title>
+<title>Dosisod's Portfolio</title>
 
 <script defer async src="/bin/bundle.js"></script>
 <link rel="stylesheet" href="/bin/bundle.css">
+
+<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
 
 </head>
 
