--- a/index.html
+++ b/index.html
@@ -17,76 +17,75 @@
 <body>
 
 <div class="slides">
-	<div class="slide" id="s1">
-		<div class="status-bar">
-			<a href="https://github.com/dosisod" name="github-wrapper">
-				<img alt="Dosisod's Github Page" class="github" src="img/github.png">
-			</a>
-			<div>
-				<p class="title">Dosisod</p>
-				<p class="desc">I <span class="heart">&hearts;&nbsp;</span>programming</p>
-			</div>
-		</div>
-		<div class="card-row">
-			<div class="card">
-				<p class="card-title">PYTHON</p>
-				<p class="card-desc">
-					Webscraping with beautiful soup
-					<a class="orange" href="https://github.com/dosisod/EZWS">(EZWS)</a>,
-					and an under-development webapp using flask
-					<a class="orange" href="https://github.com/dosisod/SHIMON">(SHIMON)</a>
-				</p>
-			</div>
-			<div class="card">
-				<p class="card-title">JAVASCRIPT</p>
-				<p class="card-desc">
-					SHA512-based timeout for web downloads
-					<a class="orange" href="https://github.com/dosisod/wasjs">(was.js)</a>,
-					offline password manager add-on for FF
-					<a class="orange" href="https://github.com/dosisod/PWDMGR">(PWDMGR)</a>
-				</p>
-			</div>
-		</div>
-		<div class="card-row">
-			<div class="card">
-				<p class="card-title">C++</p>
-				<p class="card-desc">
-					Terminal text editor using ncurses
-					<a class="orange" href="https://github.com/dosisod/banana">(banana)</a>,
-					module-based robot-building framework for FRC teams
-					<a class="orange" href="https://github.com/FRC-4309/StarDust">(StarDust)</a>
-				</p>
-			</div>
-			<div class="card">
-				<p class="card-title">PHP</p>
-				<p class="card-desc">
-					Small and versatile music player using HTML, JS, and PHP
-					<a class="orange" href="https://github.com/dosisod/music">(music)</a>
-				</p>
-			</div>
-		</div>
-	</div>
-	<div class="slide" id="s2">
-		<ul class="container">
-			<li>
-				<span class="bubble bubble-void bubble-title">Daily Open-Source</span>
-			</li>
-			<li class="contrib-container">
-				<img class="contribs" src="http://ghchart.rshah.org/dosisod" alt="dosisod's github contributions"/>
-			</li>
-			<li>
-				<span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
-				<ul id="recent"></ul>
-			</li>
-		</ul>
-	</div>
+  <div class="slide" id="s1">
+    <div class="status-bar">
+      <a href="https://github.com/dosisod" name="github-wrapper">
+        <img alt="Dosisod's Github Page" class="github" src="img/github.png">
+      </a>
+      <div>
+        <p class="title">Dosisod</p>
+        <p class="desc">I <span class="heart">&hearts;&nbsp;</span>Open Source</p>
+      </div>
+    </div>
+    <div class="card-row">
+      <div class="card">
+        <p class="card-title">PYTHON</p>
+        <p class="card-desc">
+          Webscraping with beautiful soup
+          <a class="orange" href="https://github.com/dosisod/EZWS">(EZWS)</a>,
+          and an under-development webapp using flask
+          <a class="orange" href="https://github.com/dosisod/SHIMON">(SHIMON)</a>
+        </p>
+      </div>
+      <div class="card">
+        <p class="card-title">JAVASCRIPT</p>
+        <p class="card-desc">
+          SHA512-based timeout for web downloads
+          <a class="orange" href="https://github.com/dosisod/wasjs">(was.js)</a>,
+          offline password manager add-on for FF
+          <a class="orange" href="https://github.com/dosisod/PWDMGR">(PWDMGR)</a>
+        </p>
+      </div>
+    </div>
+    <div class="card-row">
+      <div class="card">
+        <p class="card-title">C/C++</p>
+        <p class="card-desc">
+          Modular robot building framework for FRC teams
+          <a class="orange" href="https://github.com/FRC-4309/StarDust">(StarDust)</a>,
+          the <a class="orange" href="http://github.com/dosisod/skull">(skull)</a> programming language.
+        </p>
+      </div>
+      <div class="card">
+        <p class="card-title">PHP</p>
+        <p class="card-desc">
+          Small and versatile music player using HTML, JS, and PHP
+          <a class="orange" href="https://github.com/dosisod/music">(music)</a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="slide" id="s2">
+    <ul class="container">
+      <li>
+        <span class="bubble bubble-void bubble-title">Daily Open-Source</span>
+      </li>
+      <li class="contrib-container">
+        <img class="contribs" src="http://ghchart.rshah.org/dosisod" alt="dosisod's github contributions"/>
+      </li>
+      <li>
+        <span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
+        <ul id="recent"></ul>
+      </li>
+    </ul>
+  </div>
 </div>
 
 </body>
 
 <script>
 window.onload=function(event) {
-	recent_commits()
+  recent_commits()
 }
 </script>
 
