made sure all content is https

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p class="card-desc">
           Modular robot building framework for FRC teams
           <a class="orange" href="https://github.com/FRC-4309/StarDust">(StarDust)</a>,
-          the <a class="orange" href="http://github.com/dosisod/skull">(skull)</a> programming language.
+          the <a class="orange" href="https://github.com/dosisod/skull">(skull)</a> programming language.
         </p>
       </div>
       <div class="card">
@@ -71,7 +71,7 @@
         <span class="bubble bubble-void bubble-title">Daily Open-Source</span>
       </li>
       <li class="contrib-container">
-        <img class="contribs" src="http://ghchart.rshah.org/dosisod" alt="dosisod's github contributions"/>
+        <img class="contribs" src="https://ghchart.rshah.org/dosisod" alt="dosisod's github contributions"/>
       </li>
       <li>
         <span class="bubble bubble-fill bubble-comment">Most Recent Commits:</span>
