--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-<div style="display: flex; height: 100%;">
-  <div style="margin: auto;">
-    <p>New landing page is under construction. Come back later!</p>
+<main>
+  <h1>dosisod.com</h1>
+  <br>
+  <p>My little blog site.</p>
+  <br>
+  <p>
+    I talk about programming, science fiction, books, movies, shower
+    thoughts, or whatever I want (this is my site after all).
+  </p>
+  <br>
+  <h2>Latest blogs</h2>
 
-    <img src="./construction.gif">
-  </div>
-</div>
-
-<style>
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-</style>
+  <ul>
+    <li>
+      <span>
+        <span class="gray">Jan 21 2022</span>
+        <a href="./blog/my-first-blog.html">My first blog</a>
+      </span>
+    </li>
+  </ul>
+<main>
 
 </body>
 </html>
