--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
   <ul>
     <li>
       <span>
+        <span class="gray">Feb  6 2022</span>
+        <a href="./blog/Enders%20Game.html">Ender's Game book review</a>
+      </span>
+    </li>
+    <li>
+      <span>
         <span class="gray">Jan 21 2022</span>
         <a href="./blog/my-first-blog.html">My first blog</a>
       </span>
     </li>
   </ul>
 <main>
+
+<style>
+.gray {
+  white-space: pre-wrap;
+}
+<style>
 
 </body>
 </html>
