Auto generate index page

--- a/index.html
+++ b/index.html
@@ -5,49 +5,38 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="stylesheet" href="./styles.css">
+  <title>Dosisod's Blog</title>
 </head>
 <body>
 
 <main>
-  <h1>dosisod.com</h1>
-  <br>
-  <p>My little blog site.</p>
-  <br>
-  <p>
-    I talk about programming, science fiction, books, movies, shower
-    thoughts, or whatever I want (this is my site after all).
-  </p>
-  <br>
-  <h2>Latest blogs</h2>
+<h1>dosisod.com</h1>
+<br>
+<p>My little blog site.</p>
+<br>
+<p>I talk about programming, science fiction, books, movies, shower
+thoughts, or whatever I want (this is my site after all).</p>
+<br>
+<h2>Latest blogs</h2>
+<br>
+<ul>
+  <li>
+    <span>
+      <span class="gray">Feb 10 2022</span>
+      <a href="./blog/Feed.html">Feed Book Review (No Spoilers)</a>
+    </span>
+  </li>
+  <li>
+    <span>
+      <span class="gray">Jan 30 2022</span>
+      <a href="./blog/Enders Game.html">Ender's Game Book / Movie Review</a>
+    </span>
+  </li>
+</ul><br>
+<style>.gray { white-space: pre-wrap; }<style>
+<br>
 
-  <br>
-  <ul>
-    <li>
-      <span>
-        <span class="gray">Feb 10 2022</span>
-        <a href="./blog/Feed.html">Feed Book Review (No Spoilers)</a>
-      </span>
-    </li>
-    <li>
-      <span>
-        <span class="gray">Feb  6 2022</span>
-        <a href="./blog/Enders%20Game.html">Ender's Game book review</a>
-      </span>
-    </li>
-    <li>
-      <span>
-        <span class="gray">Jan 21 2022</span>
-        <a href="./blog/my-first-blog.html">My first blog</a>
-      </span>
-    </li>
-  </ul>
 <main>
-
-<style>
-.gray {
-  white-space: pre-wrap;
-}
-<style>
 
 </body>
 </html>
