Add better syntax highlighting for code blocks:
Use highlight.js for generating colored static HTML for use in code blocks.
Highlight.js is really cool: it has zero dependencies, works with a
bunch of different languages, has a bunch of styles you can apply, and
the generated HTML is relatively small.

Also use absolute naming for the stylesheets, which simplifies the template
generation a bit. This means that you wont be able to go to a file directly
via "file:///" anymore, but that isnt a huge deal.

--- a/index.template.html
+++ b/index.template.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" href="PATH_PREFIX/styles.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/gruvbox-dark-hard.css" />
   <title>TITLE</title>
 </head>
 <body>
