Fix index generator issues:
* Switch to using URL friendly titles

* Properly grab dates of blogs that where renamed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="stylesheet" href="/styles/main.css">
-  <title>Dosisod's Blog</title>
+  <link rel="stylesheet" href="/styles/gruvbox-dark-hard.css" />
+  <title>index</title>
 </head>
 <body>
 
@@ -22,20 +23,25 @@ thoughts, or whatever I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
-      <span class="gray">Feb 10 2022</span>
-      <a href="./blog/Feed.html">Feed Book Review (No Spoilers)</a>
+      <span class="gray">Mar  7 2022</span>
+      <a href="./blog/lost-at-c-anonymous-unions.html">Lost at C: Anonymous Unions</a>
     </span>
   </li>
   <li>
     <span>
       <span class="gray">Jan 30 2022</span>
-      <a href="./blog/Enders Game.html">Ender's Game Book / Movie Review</a>
+      <a href="./blog/enders-game.html">Ender's Game Book / Movie Review</a>
     </span>
   </li>
-</ul><br>
+  <li>
+    <span>
+      <span class="gray">Feb 10 2022</span>
+      <a href="./blog/feed.html">Feed Book Review (No Spoilers)</a>
+    </span>
+  </li>
+</ul>
 <style>.gray { white-space: pre-wrap; }<style>
 <br>
-
 <main>
 
 </body>
