--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="" />
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/gruvbox-dark-hard.css" />
-  <title>index</title>
+  <title>Dosisod's Blog</title>
 </head>
 <body>
 
@@ -23,7 +23,7 @@ thoughts, or whatever I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
-      <span class="gray">Mar  7 2022</span>
+      <span class="gray">Mar  6 2022</span>
       <a href="./blog/lost-at-c-anonymous-unions.html">Lost at C: Anonymous Unions</a>
     </span>
   </li>
