Start new "Writing a Compiler" series

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ thoughts, or whatever I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
+      <span class="gray">Mar 13 2022</span>
+      <a href="./blog/writing-a-compiler-0.html">Writing a Compiler: Before You Start</a>
+    </span>
+  </li>
+  <li>
+    <span>
       <span class="gray">Mar  6 2022</span>
       <a href="./blog/lost-at-c-anonymous-unions.html">Lost at C: Anonymous Unions</a>
     </span>
