--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="" />
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/gruvbox-dark-hard.css" />
-  <title>Dosisod's Blog</title>
+  <title>dosisod.com</title>
 </head>
 <body>
 
@@ -17,6 +17,8 @@
 <br>
 <p>I talk about programming, science fiction, books, movies, shower
 thoughts, or whatever I want (this is my site after all).</p>
+<br>
+<p>You can follow me on <a href="https://github.com/dosisod">Github</a>.</p>
 <br>
 <h2>Latest blogs</h2>
 <br>
@@ -46,6 +48,7 @@ thoughts, or whatever I want (this is my site after all).</p>
     </span>
   </li>
 </ul>
+<br>
 <style>.gray { white-space: pre-wrap; }<style>
 <br>
 <main>
