--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@ thoughts, or whatever I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
+      <span class="gray">Mar 15 2022</span>
+      <a href="./blog/ex-machina.html">Ex Machina Movie Review</a>
+    </span>
+  </li>
+  <li>
+    <span>
       <span class="gray">Mar 13 2022</span>
       <a href="./blog/writing-a-compiler-0.html">Writing a Compiler: Before You Start</a>
     </span>
