Add list of books I am currently reading

--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
 <p>My little blog site.</p>
 <br>
 <p>I talk about programming, science fiction, books, movies, shower
-thoughts, or whatever I want (this is my site after all).</p>
+thoughts, or whatever else I want (this is my site after all).</p>
 <br>
-<p>You can follow me on <a href="https://github.com/dosisod">Github</a>.</p>
+<p>You can follow me on <a href="https://github.com/dosisod">GitHub</a>.</p>
+<br>
+<h2>Currently reading</h2>
+<br>
+<ul>
+<li><a href="https://www.amazon.com/dp/0593098242">Children of Dune</a></li>
+<li><a href="https://suif.stanford.edu/dragonbook/">The Dragon Book</a></li>
+<li><a href="https://www.amazon.com/dp/0135957052">The Pragmatic Programmer</a></li>
+<li><a href="http://classics.mit.edu/Antoninus/meditations.html">Meditations</a></li>
+<li><a href="https://www.amazon.com/dp/0451524934">1984</a></li>
+</ul>
 <br>
 <h2>Latest blogs</h2>
 <br>
