Write a Compiler part 1: Project Setup

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ thoughts, or whatever else I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
+      <span class="gray">Mar 19 2022</span>
+      <a href="./blog/writing-a-compiler-1.html">Writing a Compiler (Part 1): Project Setup</a>
+    </span>
+  </li>
+  <li>
+    <span>
       <span class="gray">Mar 15 2022</span>
       <a href="./blog/ex-machina.html">Ex Machina Movie Review</a>
     </span>
