Update currently reading book list

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ thoughts, or whatever else I want (this is my site after all).</p>
 <h2>Currently reading</h2>
 <br>
 <ul>
-<li><a href="https://www.amazon.com/dp/0593098242">Children of Dune</a></li>
+<li><a href="https://www.amazon.com/dp/0593098250">God Emperor of Dune</a></li>
 <li><a href="https://suif.stanford.edu/dragonbook/">The Dragon Book</a></li>
 <li><a href="https://www.amazon.com/dp/0135957052">The Pragmatic Programmer</a></li>
 <li><a href="http://classics.mit.edu/Antoninus/meditations.html">Meditations</a></li>
