--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ thoughts, or whatever else I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
+      <span class="gray">Mar 30 2022</span>
+      <a href="./blog/writing-a-compiler-3.html">Writing a Compiler (Part 3): Classifying + Better Tokenizing</a>
+    </span>
+  </li>
+  <li>
+    <span>
       <span class="gray">Mar 22 2022</span>
       <a href="./blog/dune-notes.html">Dune Notes</a>
     </span>
