Add "Git all the things" blog:
Fix python blocks being escaped (they produce raw HTML, and as such, escaping
would defeat the purpose).

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ thoughts, or whatever else I want (this is my site after all).</p>
 <ul>
   <li>
     <span>
+      <span class="gray">Mar 31 2022</span>
+      <a href="./blog/git-all-the-things.html">Git All The Things!</a>
+    </span>
+  </li>
+  <li>
+    <span>
       <span class="gray">Mar 30 2022</span>
       <a href="./blog/writing-a-compiler-3.html">Writing a Compiler (Part 3): Classifying + Better Tokenizing</a>
     </span>
