--- a/index.template.html
+++ b/index.template.html
@@ -6,7 +6,7 @@
   <meta name="description" content="" />
   <meta name="og:title" content="TITLE" />
   <link rel="stylesheet" href="/styles/main.css">
-  <link rel="stylesheet" href="/styles/gruvbox-dark-hard.css" />
+  <link rel="stylesheet" href="/styles/github.css" />
   <title>TITLE</title>
 </head>
 <body>
